# Human3D

./: CMakeLists.txt  mainwindow.cpp  rrglwidget.cpp  rrglwidget.h  sensorloader.cpp  stlfileloader.cpp
3dviewer/: CMakeLists.txt
3dviewer/core/: Base3dWidget.cpp  Base3dWidget.h  GLBatch.cpp  GLBatch.h  GLPointManager.cpp  GLPointManager.h  Test3dWidget.cpp  Test3dWidget.h  Viewer3dWidget.cpp  Viewer3dWidget.h  main.cpp  stlfileloader.cpp  stlfileloader.h
human3d/: CMakeLists.txt  humangl.cpp  rrglwidget.cpp  rrglwidget.h  sensorloader.h  stlfileloader.h
qopenglwidget_test/: CMakeLists.txt  main.cpp  mainwindow.cpp
qt_gl_test/: BaseGLWidget.cpp  BaseGLWidget.h  Module3DManager.cpp  Module3DManager.h  PointCloudOpenGLWidget.cpp  PointCloudOpenGLWidget.h  main.cpp
qt_gl_test/res/: plot.csv
qt_gl_test/shader/: shader_point.vs
qt_gl_test2/: CMakeLists.txt  ShaderManager.cpp  ShaderManager.h  glwindow.cpp  glwindow.h  glwindow2.cpp  glwindow2.h  qobjload.cpp  qobjload.h  widget.cpp  widget.h
